<resources>
    <string name="app_name">Quiz App</string>
    <string name="answer_question">Set answer</string>
    <string name="complete_quiz">Complete Quiz</string>
    <string name="complete_quiz_dialog">Are you sure you want to complete the quiz?</string>
    <string name="yes_dialog_text">Yes</string>
    <string name="cancel_dialog_text">Cancel</string>
    <string name="share_option_dialog">Share with: </string>
    <string name="quiz_completed">You have completed the quiz:</string>
    <string name="completed_quiz_score">Score:</string>
    <string name="share">Share</string>
    <string name="share_completed_quiz_text">
        Hi!\nI just completed the quiz %s!\nMy score was %.2f%%\n\nTry to beat my score!
    </string>
    <string name="recipient_hint">To:</string>
    <string name="subject_hint">Subject:</string>
    <string name="send">Send</string>
    <string name="body_hint">Message:</string>
    <string name="subject_email_text">Check this Quiz out!</string>
    <string name="edit_button_text">EDIT</string>
    <string name="denied_permission">Need permission to perform this action</string>
    <string name="sms_manager_fail">Could not send sms</string>
    <string name="create_quiz">Create Quiz</string>
    <string name="name">Name:</string>
    <string name="description">Description:</string>
    <string name="add_description">Add description</string>
    <string name="enter_name">Enter name:</string>
    <string name="done">Done</string>
    <string name="enter_question">Question:</string>
    <string name="create_question_title">Create Question</string>
    <string name="set_correct_answer_dialog">Set correct answer</string>
    <string name="correct_answer">Correct answer</string>
    <string name="create_answer">Create answer</string>
    <string name="create_answer_dialog_title">Create answer</string>
    <string name="enter_answer_hint">Enter answer</string>
    <string name="incomplete_question_text">Question needs text and correct answer to be created</string>
    <string name="failed_quiz_creation">Failed to create quiz</string>
    <string name="incomplete_quiz_text">Quiz needs name, description and questions with correct answer to be created</string>
    <string name="welcome">WELCOME</string>
    <string name="enter_name_hint">Name:</string>
    <string name="start">START</string>
    <string name="no_name_text">Please enter a name</string>
    <string name="video">video</string>
    <string name="add_video_hint">Enter youtube URL</string>
    <string name="add_video">Add video</string>
    <string name="enter_phone_number">Phone number</string>
    <string name="missing_answer">Question not answered</string>
    <string name="congratulation">Congratulations</string>
    <string name="no_phone_number">Please enter a phone number</string>
    <string name="error_response">Could not load</string>
    <string name="error_load_quiz">Could not load quiz</string>
    <string name="questions">Questions:</string>
</resources>
