<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/recipient_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/recipient_hint"
            android:inputType="textEmailAddress"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/email_send_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"/>


    </LinearLayout>

    <EditText
        android:id="@+id/email_subject_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/subject_hint"
        android:inputType="textEmailSubject"/>

    <EditText
        android:id="@+id/email_body_edit_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/body_hint"
        android:inputType="textMultiLine"
        android:minLines="10"
        android:gravity="top|start"/>

</LinearLayout>