<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        style="@style/Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/congratulation" />

    <TextView
        android:id="@+id/completed_quiz_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="8dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quiz_completed"
            android:layout_marginRight="4dp"
            android:textSize="16dp" />

        <TextView
            style="@style/Title"
            android:id="@+id/completed_quiz_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <TextView
            style="@style/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/completed_quiz_score"
            android:layout_marginRight="4dp"/>

        <TextView
            style="@style/Title"
            android:id="@+id/completed_quiz_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:layout_margin="4dp">

        <Button
            style="@style/QuizButton"
            android:id="@+id/share_completed_quiz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/share"/>
    </LinearLayout>


</LinearLayout>